# fastapi-tutorial

./: alembic.ini  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: b91063082e8f_added_users_and_items_table_postgres.py
assets/: c9057d55db2e_added_users_and_items_table.py
sql_app/: database.py
