[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = ""
authors = ["David Cardozo <david@cerberusdata.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^20.2.3"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
sqlalchemy = "^1.3.20"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
